[gd_scene load_steps=6 format=2]

[ext_resource path="res://Icons/crate.png" type="Texture" id=1]
[ext_resource path="res://Control/GroundItem.gd" type="Script" id=2]
[ext_resource path="res://Control/outline_shader.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/Smooth = false
shader_param/line_thickness = 0.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/pixel_size = 1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="GroundItem" type="Area2D"]
position = Vector2( 0, -1 )
collision_layer = 256
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 1, -4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="ItemSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
scale = Vector2( 0.7, 0.7 )
z_index = 20
[connection signal="input_event" from="." to="." method="_on_GroundItem_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_GroundItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GroundItem_mouse_exited"]
